# story_generation1

./: index.html  package-lock.json  package.json  poetry_plugin_export-1.9.0-py3-none-any.whl  profiles.json  pyproject.toml  requirements.txt  run-mindlink.ps1  upload_test.py  vite.config.ts
data/Aditya/: memory_Aditya.arrow
data/Aditya/faiss_Aditya/: index.faiss  index.pkl
data/Ankit/: memory_Ankit.arrow
data/Ankit/faiss_Ankit/: index.faiss  index.pkl
data/Bro/: memory_Bro.arrow
data/Bro/faiss_Bro/: index.faiss  index.pkl
data/Brother/: memory_Brother.arrow
data/Brother/faiss_Brother/: index.faiss  index.pkl
data/Bruhh/: memory_Bruhh.arrow
data/Bruhh/faiss_Bruhh/: index.faiss  index.pkl
data/Chebbs/: memory_Chebbs.arrow
data/Chebbs/faiss_Chebbs/: index.faiss  (+1 more)
data/Kailash/: memory_Kailash.arrow
data/Manoj/: memory_Manoj.arrow
data/Nandan/: memory_Nandan.arrow
data/Ria/: memory_Ria.arrow
data/Suchith/: memory_Suchith.arrow
data/profiles/: profiles.json
pkg/: __init__.py  agent.py  gpt4v.py  memory_kg.py  photo.py  profiles.py
pkg/app/: chat.py  main.py  session_state.py
public/: index.html
src/: App.css  App.tsx  index.css  main.tsx
src/api/: agent.ts  axiosConfig.ts  chat.ts  memory.ts  photos.ts  profiles.ts  types.ts
src/components/: ChatPage.tsx  GraphPanel.tsx  Navbar.tsx  PhotosPage.tsx  ProfilePanel.tsx
src/context/: ProfileContext.tsx
src/pages/: ChatPage.tsx  FortunePage.tsx  GraphPage.tsx  LandingPage.tsx  PhotosPage.tsx  ProfilesPage.tsx  YearInReviewPanel.tsx
src/types/: react-vis-network-graph.d.ts
(+13 files in other folders)
