[project]
name = "mindlink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain-community (>=0.4,<0.5)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)"
]

[tool.poetry]
# Include your backend code as an installable package
packages = [
    { include = "pkg" }
]

[[tool.poetry.source]]
name = "pypi-mirror"
url = "https://pypi.org/simple"
priority = "primary"


[tool.poetry.dependencies]
langchain-openai = {source = "pypi-mirror"}
[dependency-groups]
dev = [
    "uvicorn (>=0.38.0,<0.39.0)"
]
